KVH/mykvh/Email-to-anything/objects/User_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Default_Business_Unit__c</fullName>
        <inlineHelpText>The business unit selected by default in the email editor.</inlineHelpText>
        <label>Default Business Unit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Attachment_Location__c</fullName>
        <description>Remembering of the last option selected (i.e. use last option as default for next time) per user per parent object</description>
        <inlineHelpText>Default location to select attachment from in email client</inlineHelpText>
        <label>EC Default Attachment Location</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC_Default_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for new emails.</inlineHelpText>
        <label>EC_Default_Email_Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Forward_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for forwarded emails.</inlineHelpText>
        <label>EC_Default_Forward_Email_Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_From_Address_Type__c</fullName>
        <inlineHelpText>The email from-address set by default in the email editor.</inlineHelpText>
        <label>EC Default From Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>user</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>user-alt</fullName>
                </value>
                <value>
                    <fullName>owea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Default_From_Address__c</fullName>
        <inlineHelpText>The email from-address set by default in the email editor.</inlineHelpText>
        <label>EC Default From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EC_Default_Reply_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for replied emails.</inlineHelpText>
        <label>EC_Default_Reply_Email_Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Template_Folder__c</fullName>
        <inlineHelpText>Default email template folder while selecting templates in email client</inlineHelpText>
        <label>EC Default Template Folder</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Email_Address__c</fullName>
        <inlineHelpText>This address must match either your user email address or the email address specified in My Email Settings. Specifying any other address will result in emails being sent from the wrong email address.</inlineHelpText>
        <label>EC Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EC_Email_Format__c</fullName>
        <inlineHelpText>The type of text editor displayed by default in the email editor.</inlineHelpText>
        <label>EC Email Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Plain Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_OWEA_Id__c</fullName>
        <label>EC OWEA Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Sender_BCC_Default_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Sender BCC check box in the email editor will default to checked status and if unchecked it will default to unchecked.</inlineHelpText>
        <label>EC Sender BCC Default Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Sender_Name__c</fullName>
        <inlineHelpText>This name must match either your user first and last name or the Email Name specified in My Email Settings. Specifying any other name will result in the wrong from-address display name on emails.</inlineHelpText>
        <label>EC Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Use_Signature__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the current user&apos;s email signature (set within &quot;My Email Settings&quot;) is applied to an email after it is sent from the email editor. If unchecked, no signature is applied.</inlineHelpText>
        <label>EC Use Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>e2a User Settings</label>
    <nameField>
        <label>User Settings</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>